--- a/web.html
+++ b/web.html
@@ -69,8 +69,9 @@ background-color: #4CAF50;
 </div>
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="#nav">Contact</a></li>
+  <li><a href="www.facebook.com">Facebook</a></li>
+  <li><a href="www.google.com">Google</a></li>
 </ul><br><br>
 <form method=post>
 <textarea row="5" cols="20"  placeholder="Write the code in the space provided" style="color:#008CBA;width:300px; height:300px;">
