--- a/web.html
+++ b/web.html
@@ -70,8 +70,8 @@ background-color: #4CAF50;
 <ul>
   <li><a class="active" href="#home">Home</a></li>
   <li><a href="#nav">Contact</a></li>
-  <li><a href="https://www.facebook.com/">Facebook</a></li>
-  <li><a href="https://www.google.co.in/">Google</a></li>
+  <li><a href="https://www.facebook.com/nhi.bataunga.kabhi">Facebook</a></li>
+  <li><a href="https://www.linkedin.com/in/navsin189">LinkedIn</a></li>
 </ul><br><br>
 <form method=post>
 <textarea row="5" cols="20"  placeholder="Write the code in the space provided" style="color:#008CBA;width:300px; height:300px;">
