--- a/web.html
+++ b/web.html
@@ -69,9 +69,9 @@ background-color: #4CAF50;
 </div>
 <ul>
   <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#nav">Contact</a></li>
-  <li><a href="https://www.facebook.com/nhi.bataunga.kabhi">Facebook</a></li>
-  <li><a href="https://www.linkedin.com/in/navsin189">LinkedIn</a></li>
+  <li><a href="https://www.instagram.com/mr.knight_13/?hl=en">Instagram</a></li>
+  <li><a href="https://www.facebook.com/nhi.bataunga.kabhi" target=_blank>Facebook</a></li>
+  <li><a href="https://www.linkedin.com/in/navsin189" target=_blank>LinkedIn</a></li>
 </ul><br><br>
 <form method=post>
 <textarea row="5" cols="20"  placeholder="Write the code in the space provided" style="color:#008CBA;width:300px; height:300px;">
