--- a/web.html
+++ b/web.html
@@ -120,7 +120,7 @@ input[type=reset] {
 <input type= reset value="Reset">
 </form>
 <div class="footer">
-  <h3><b>Newbie in Technology and master in learning</b></h3>
+  <h3><b>Newbie in Technology and Master in learning</b></h3>
 </div>
 </body>
 </html>
